# OpenGLExercise

./: CMakeLists.txt
LZMA/: CMakeLists.txt
Shader/: font.fs
src/: BaseRender.h  TextRender.h  main.cpp
src/TextRender/: Readme.md  TextRender.cpp  TextRender.h
